default/objects/NVMStatsSF__NVM_Call_Segment__c/NVMStatsSF__NVM_Call_Segment__c.object-meta.xml
<CustomObject>
    <label>NVM Call Segment</label>
    <nameField>
        <displayFormat>CS-{0000000000}</displayFormat>
        <label>NVM Call Segment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NVM Call Segments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>