default/objects/NVMStatsSF__NVM_Call_Segment__c/fields/NVMStatsSF__Agent__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agent</label>
    <referenceTo>User</referenceTo>
    <relationshipName>NVM_Call_Segments</relationshipName>
    <type>Lookup</type>
</CustomField>