default/objects/NVMStatsSF__NVM_Call_Segment__c/fields/NVMStatsSF__Agent_Held_Time__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Agent_Held_Time__c</fullName>
    <label>Agent Hold Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>