default/objects/NVMStatsSF__NVM_Call_Segment__c/fields/NVMStatsSF__Agent_ID__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Agent_ID__c</fullName>
    <label>Agent ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>