default/objects/NVMStatsSF__NVM_Call_Segment__c/fields/NVMStatsSF__AgentTalk_TIme__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__AgentTalk_TIme__c</fullName>
    <label>AgentTalk TIme</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>