default/objects/NVMStatsSF__NVM_Call_Segment__c/fields/NVMStatsSF__Contributing_Events__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Contributing_Events__c</fullName>
    <label>Contributing Events</label>
    <length>255</length>
    <type>Text</type>
</CustomField>