default/objects/NVMStatsSF__NVM_Call_Segment__c/fields/NVMStatsSF__Date__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Date__c</fullName>
    <label>Date</label>
    <type>Date</type>
</CustomField>