default/objects/NVMStatsSF__NVM_Call_Segment__c/fields/NVMStatsSF__Fiscal_Quarter__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Fiscal_Quarter__c</fullName>
    <formula>CASE(MONTH( NVMStatsSF__Date__c ) , 
1, &quot;Q1-&quot;+ TEXT(year( NVMStatsSF__Date__c )), 
2, &quot;Q1-&quot;+ TEXT(year(NVMStatsSF__Date__c)), 
3, &quot;Q1-&quot;+ TEXT(year(NVMStatsSF__Date__c)), 
4, &quot;Q2-&quot;+ TEXT(year(NVMStatsSF__Date__c)), 
5, &quot;Q2-&quot;+ TEXT(year(NVMStatsSF__Date__c)), 
6, &quot;Q2-&quot;+ TEXT(year(NVMStatsSF__Date__c)), 
7, &quot;Q3-&quot;+ TEXT(year(NVMStatsSF__Date__c)), 
8, &quot;Q3-&quot;+ TEXT(year(NVMStatsSF__Date__c)), 
9, &quot;Q3-&quot;+ TEXT(year(NVMStatsSF__Date__c)), 
10, &quot;Q4-&quot;+ TEXT(year(NVMStatsSF__Date__c)), 
11, &quot;Q4-&quot;+ TEXT(year(NVMStatsSF__Date__c)), 
12, &quot;Q4-&quot;+ TEXT(year(NVMStatsSF__Date__c)), &quot; &quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fiscal Quarter</label>
    <type>Text</type>
</CustomField>