default/objects/NVMStatsSF__NVM_Call_Segment__c/fields/NVMStatsSF__Month_of_Year__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Month_of_Year__c</fullName>
    <formula>CASE(MONTH( NVMStatsSF__Date__c ) , 
1, &quot;(1) Jan&quot;, 
2, &quot;(2) Feb&quot;, 
3, &quot;(3) Mar&quot;, 
4, &quot;(4) Apr&quot;, 
5, &quot;(5) May&quot;, 
6, &quot;(6) Jun&quot;, 
7, &quot;(7) Jul&quot;, 
8, &quot;(8) Aug&quot;, 
9, &quot;(9) Sep&quot;, 
10, &quot;(10) Oct&quot;, 
11, &quot;(11) Nov&quot;, 
12, &quot;(12) Dec&quot;, &quot; &quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Month of Year</label>
    <type>Text</type>
</CustomField>