default/objects/NVMStatsSF__NVM_Call_Segment__c/fields/NVMStatsSF__Numeric_Week_of_Year__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Numeric_Week_of_Year__c</fullName>
    <formula>VALUE( NVMStatsSF__Week_of_Year__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Numeric Week of Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>