default/objects/NVMStatsSF__NVM_Call_Segment__c/fields/NVMStatsSF__NVM_Call_Summary__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__NVM_Call_Summary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NVM Call Summary</label>
    <referenceTo>NVMStatsSF__NVM_Call_Summary__c</referenceTo>
    <relationshipLabel>NVM Call Segments</relationshipLabel>
    <relationshipName>NVM_Call_Segments</relationshipName>
    <type>Lookup</type>
</CustomField>