default/objects/NVMStatsSF__NVM_Call_Segment__c/fields/NVMStatsSF__Queue_Duration__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Queue_Duration__c</fullName>
    <label>Queue Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>