default/objects/NVMStatsSF__NVM_Call_Segment__c/fields/NVMStatsSF__Queue_Name__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Queue_Name__c</fullName>
    <label>Queue Name</label>
    <length>70</length>
    <type>Text</type>
</CustomField>