default/objects/NVMStatsSF__NVM_Call_Segment__c/fields/NVMStatsSF__Seg_Transition_Reason__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Seg_Transition_Reason__c</fullName>
    <label>Seg Transition Reason</label>
    <length>50</length>
    <type>Text</type>
</CustomField>