default/objects/NVMStatsSF__NVM_Call_Segment__c/fields/NVMStatsSF__Segment_End_Time__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Segment_End_Time__c</fullName>
    <label>Segment End Time</label>
    <type>DateTime</type>
</CustomField>