default/objects/NVMStatsSF__NVM_Call_Segment__c/fields/NVMStatsSF__Segment_Sequence__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Segment_Sequence__c</fullName>
    <label>Segment Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>