default/objects/NVMStatsSF__NVM_Call_Segment__c/fields/NVMStatsSF__Week_of_Year__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Week_of_Year__c</fullName>
    <formula>TEXT(MOD(FLOOR( ( NVMStatsSF__Date__c  - DATE(2006,01,01))/7),52)+1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Week of Year</label>
    <type>Text</type>
</CustomField>