default/objects/NVMStatsSF__NVM_Call_Segment__c/listViews/NVMStatsSF__All.listView-meta.xml
<ListView>
    <fullName>NVMStatsSF__All</fullName>
    <columns>NAME</columns>
    <columns>NVMStatsSF__Segment_Start_Time__c</columns>
    <columns>NVMStatsSF__Queue_Duration__c</columns>
    <columns>NVMStatsSF__Queue_Name__c</columns>
    <columns>NVMStatsSF__Segment_End_Time__c</columns>
    <columns>NVMStatsSF__Segment_Sequence__c</columns>
    <columns>NVMStatsSF__Seg_Transition_Reason__c</columns>
    <columns>NVMStatsSF__Contributing_Events__c</columns>
    <columns>NVMStatsSF__Agent__c</columns>
    <columns>NVMStatsSF__AgentTalk_TIme__c</columns>
    <columns>NVMStatsSF__Agent_Held_Time__c</columns>
    <columns>NVMStatsSF__ACW_Time__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>